fixed projects text alignment

--- a/css/main.css
+++ b/css/main.css
@@ -253,7 +253,13 @@ body, html {
   object-fit: scale-down;
   width:100%;
   height:100%;
-  min-width:400px;
+  max-height: 500px;
+  position: relative;
+}
+
+.position{
+  position: relative;
+  text-align: center;
 }
 
 .row2-1{
@@ -266,8 +272,7 @@ body, html {
 }
 
 .widthpad{
-  margin-left:20%;
-  margin-right:20%;
+  height:400px;
 }
 
 
